--- a/1.1.3/Dockerfile
+++ b/1.1.3/Dockerfile
@@ -1,19 +1,15 @@
-#
-# NOTE: THIS DOCKERFILE IS GENERATED VIA "update.sh"
-#
-# PLEASE DO NOT EDIT IT DIRECTLY.
-#
 FROM php:7-alpine
 
 RUN apk --no-cache add curl git subversion openssh openssl mercurial tini
 
-RUN echo "memory_limit=-1" > $PHP_INI_DIR/conf.d/memory-limit.ini \
- && echo "date.timezone=${PHP_TIMEZONE:-UTC}" > $PHP_INI_DIR/conf.d/date_timezone.ini
+RUN echo "memory_limit=-1" > "$PHP_INI_DIR/conf.d/memory-limit.ini" \
+ && echo "date.timezone=${PHP_TIMEZONE:-UTC}" > "$PHP_INI_DIR/conf.d/date_timezone.ini"
 
-ENV COMPOSER_VERSION 1.2.1
-ENV COMPOSER_HOME /composer
-ENV PATH /composer/vendor/bin:$PATH
+ENV PATH "/composer/vendor/bin:$PATH"
 ENV COMPOSER_ALLOW_SUPERUSER 1
+ENV COMPOSER_HOME /composer
+ENV COMPOSER_VERSION 1.1.3
+
 RUN curl -s -f -L -o /tmp/composer-setup.php https://getcomposer.org/installer \
  && curl -s -f -L -o /tmp/composer-setup.sig https://composer.github.io/installer.sig \
  && php -r " \
@@ -28,9 +24,9 @@ RUN curl -s -f -L -o /tmp/composer-setup.php https://getcomposer.org/installer \
  && rm /tmp/composer-setup.php \
  && composer --ansi --version --no-interaction
 
-WORKDIR /app
-
 VOLUME /composer
+
+WORKDIR /app
 
 CMD ["--ansi", "--version"]
 
