--- a/1.2/Dockerfile
+++ b/1.2/Dockerfile
@@ -10,18 +10,17 @@ ENV COMPOSER_ALLOW_SUPERUSER 1
 ENV COMPOSER_HOME /composer
 ENV COMPOSER_VERSION 1.2.2
 
-RUN curl -s -f -L -o /tmp/composer-setup.php https://getcomposer.org/installer \
- && curl -s -f -L -o /tmp/composer-setup.sig https://composer.github.io/installer.sig \
+RUN curl -s -f -L -o /tmp/installer.php https://raw.githubusercontent.com/composer/getcomposer.org/9184c4b85ed6ada94a298cf54e55cc252c970c28/web/installer \
  && php -r " \
-    \$hash = hash('SHA384', file_get_contents('/tmp/composer-setup.php')); \
-    \$signature = trim(file_get_contents('/tmp/composer-setup.sig')); \
+    \$signature = 'aa96f26c2b67226a324c27919f1eb05f21c248b987e6195cad9690d5c1ff713d53020a02ac8c217dbf90a7eacc9d141d'; \
+    \$hash = hash('SHA384', file_get_contents('/tmp/installer.php')); \
     if (!hash_equals(\$signature, \$hash)) { \
-        unlink('/tmp/composer-setup.php'); \
+        unlink('/tmp/installer.php'); \
         echo 'Integrity check failed, installer is either corrupt or worse.' . PHP_EOL; \
         exit(1); \
     }" \
- && php /tmp/composer-setup.php --no-ansi --install-dir=/usr/bin --filename=composer --version=${COMPOSER_VERSION} \
- && rm /tmp/composer-setup.php \
+ && php /tmp/installer.php --no-ansi --install-dir=/usr/bin --filename=composer --version=${COMPOSER_VERSION} \
+ && rm /tmp/installer.php \
  && composer --ansi --version --no-interaction
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
