change default COMPOSER_HOME to /tmp, closes #13

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -6,7 +6,7 @@ RUN echo "memory_limit=-1" > "$PHP_INI_DIR/conf.d/memory-limit.ini" \
  && echo "date.timezone=${PHP_TIMEZONE:-UTC}" > "$PHP_INI_DIR/conf.d/date_timezone.ini"
 
 ENV COMPOSER_ALLOW_SUPERUSER 1
-ENV COMPOSER_HOME /composer
+ENV COMPOSER_HOME /tmp
 ENV COMPOSER_VERSION %COMPOSER_VERSION%
 
 RUN curl -s -f -L -o /tmp/installer.php %COMPOSER_INSTALLER_URL% \
