fix cleanup part of Dockerfile

--- a/1.1/Dockerfile
+++ b/1.1/Dockerfile
@@ -22,7 +22,7 @@ RUN curl -s -f -L -o /tmp/installer.php https://raw.githubusercontent.com/compos
         exit(1); \
     }" \
  && php /tmp/installer.php --no-ansi --install-dir=/usr/bin --filename=composer --version=${COMPOSER_VERSION} \
- && rm /tmp/installer.php \
+ && rm -rf /tmp/* \
  && composer --ansi --version --no-interaction
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
