no longer supported

--- a/1.4/Dockerfile
+++ b/1.4/Dockerfile
@@ -22,7 +22,7 @@ RUN curl -s -f -L -o /tmp/installer.php https://raw.githubusercontent.com/compos
     }" \
  && php /tmp/installer.php --no-ansi --install-dir=/usr/bin --filename=composer --version=${COMPOSER_VERSION} \
  && composer --ansi --version --no-interaction \
- && rm -rf /tmp/*
+ && rm -rf /tmp/* /tmp/.htaccess
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 
