--- a/1.5/Dockerfile
+++ b/1.5/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7-alpine
+FROM php:7-alpine3.7
 
 RUN apk --no-cache add curl git subversion openssh openssl mercurial tini bash zlib-dev
 
