--- a/1.5/Dockerfile
+++ b/1.5/Dockerfile
@@ -1,11 +1,20 @@
 FROM php:7-alpine3.7
 
-RUN apk --no-cache add curl git subversion openssh openssl mercurial tini bash zlib-dev
+RUN apk --no-cache add git subversion openssh mercurial tini bash patch
 
 RUN echo "memory_limit=-1" > "$PHP_INI_DIR/conf.d/memory-limit.ini" \
  && echo "date.timezone=${PHP_TIMEZONE:-UTC}" > "$PHP_INI_DIR/conf.d/date_timezone.ini"
 
-RUN docker-php-ext-install zip
+RUN apk add --no-cache --virtual .build-deps zlib-dev \
+ && docker-php-ext-install zip \
+ && runDeps="$( \
+    scanelf --needed --nobanner --format '%n#p' --recursive /usr/local/lib/php/extensions \
+    | tr ',' '\n' \
+    | sort -u \
+    | awk 'system("[ -e /usr/local/lib/" $1 " ]") == 0 { next } { print "so:" $1 }' \
+    )" \
+ && apk add --virtual .composer-phpext-rundeps $runDeps \
+ && apk del .build-deps
 
 ENV COMPOSER_ALLOW_SUPERUSER 1
 ENV COMPOSER_HOME /tmp
