--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -31,7 +31,8 @@ RUN curl --silent --fail --location --retry 3 --output /tmp/installer.php --url 
     }" \
  && php /tmp/installer.php --no-ansi --install-dir=/usr/bin --filename=composer --version=${COMPOSER_VERSION} \
  && composer --ansi --version --no-interaction \
- && rm -rf /tmp/* /tmp/.htaccess
+ && rm -rf /tmp/* /tmp/.htaccess \
+ && mkdir -p -m 777 /tmp/cache
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 
