add libzip-dev and --with-libzip

--- a/1.7/Dockerfile
+++ b/1.7/Dockerfile
@@ -5,7 +5,8 @@ RUN apk --no-cache add git subversion openssh mercurial tini bash patch zip unzi
 RUN echo "memory_limit=-1" > "$PHP_INI_DIR/conf.d/memory-limit.ini" \
  && echo "date.timezone=${PHP_TIMEZONE:-UTC}" > "$PHP_INI_DIR/conf.d/date_timezone.ini"
 
-RUN apk add --no-cache --virtual .build-deps zlib-dev \
+RUN apk add --no-cache --virtual .build-deps zlib-dev libzip-dev \
+ && docker-php-ext-configure zip --with-libzip \
  && docker-php-ext-install zip \
  && runDeps="$( \
     scanelf --needed --nobanner --format '%n#p' --recursive /usr/local/lib/php/extensions \
