Create a new virtual package for composer run dependencies
This allows to determine the run dependencies during a multistep build install them in the target image.

Resolves: #53

--- a/1.7/Dockerfile
+++ b/1.7/Dockerfile
@@ -1,6 +1,6 @@
 FROM php:7-alpine3.8
 
-RUN apk --no-cache add git subversion openssh mercurial tini bash patch make zip unzip
+RUN apk --no-cache add --virtual .composer-rundeps git subversion openssh mercurial tini bash patch make zip unzip
 
 RUN echo "memory_limit=-1" > "$PHP_INI_DIR/conf.d/memory-limit.ini" \
  && echo "date.timezone=${PHP_TIMEZONE:-UTC}" > "$PHP_INI_DIR/conf.d/date_timezone.ini"
