--- a/1.7/Dockerfile
+++ b/1.7/Dockerfile
@@ -7,7 +7,7 @@ RUN echo "memory_limit=-1" > "$PHP_INI_DIR/conf.d/memory-limit.ini" \
 
 RUN apk add --no-cache --virtual .build-deps zlib-dev libzip-dev \
  && docker-php-ext-configure zip --with-libzip \
- && docker-php-ext-install zip \
+ && docker-php-ext-install -j$(getconf _NPROCESSORS_ONLN) zip \
  && runDeps="$( \
     scanelf --needed --nobanner --format '%n#p' --recursive /usr/local/lib/php/extensions \
     | tr ',' '\n' \
