--- a/1.8/Dockerfile
+++ b/1.8/Dockerfile
@@ -33,7 +33,8 @@ RUN curl --silent --fail --location --retry 3 --output /tmp/installer.php --url 
     }" \
  && php /tmp/installer.php --no-ansi --install-dir=/usr/bin --filename=composer --version=${COMPOSER_VERSION} \
  && composer --ansi --version --no-interaction \
- && rm -f /tmp/installer.php
+ && rm -f /tmp/installer.php \
+ && find /tmp -type d -exec chmod -v 1777 {} +
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 
