update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,23 @@
-language: minimal
+language: bash
 
 dist: trusty
+
+env:
+  - BRANCH=1.7 VERSION=1.7.3 VARIANT=7.0 LATEST=0
+  - BRANCH=1.7 VERSION=1.7.3 VARIANT=7.1 LATEST=0
+  - BRANCH=1.7 VERSION=1.7.3 VARIANT=7.2 LATEST=0
+  - BRANCH=1.7 VERSION=1.7.3 VARIANT=7.3 LATEST=0
+  - BRANCH=1.8 VERSION=1.8.5 VARIANT=7.0 LATEST=1
+  - BRANCH=1.8 VERSION=1.8.5 VARIANT=7.1 LATEST=0
+  - BRANCH=1.8 VERSION=1.8.5 VARIANT=7.2 LATEST=0
+  - BRANCH=1.8 VERSION=1.8.5 VARIANT=7.3 LATEST=0
 
 services:
   - docker
 
 before_script:
-  - make build
+  - env | sort
+  - make build BRANCH=$BRANCH VERSION=$VERSION VARIANT=$VARIANT LATEST=$LATEST
 
 script:
-  - make test
+  - make test BRANCH=$BRANCH VERSION=$VERSION VARIANT=$VARIANT LATEST=$LATEST
