--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -20,7 +20,6 @@ RUN set -eux; \
     zlib-dev \
   ; \
   docker-php-ext-install -j "$(nproc)" \
-    opcache \
     zip \
   ; \
   runDeps="$( \
@@ -28,14 +27,13 @@ RUN set -eux; \
       | tr ',' '\n' \
       | sort -u \
       | awk 'system("[ -e /usr/local/lib/" $1 " ]") == 0 { next } { print "so:" $1 }' \
-    )" \
-  apk add --no-cache --virtual .composer-phpext-rundeps $runDeps \
+    )"; \
+  apk add --no-cache --virtual .composer-phpext-rundeps $runDeps; \
   apk del .build-deps
 
 RUN printf "# composer php cli ini settings\n\
 date.timezone=UTC\n\
 memory_limit=-1\n\
-opcache.enable_cli=1\n\
 " > $PHP_INI_DIR/php-cli.ini
 
 ENV COMPOSER_ALLOW_SUPERUSER 1
@@ -43,7 +41,7 @@ ENV COMPOSER_HOME /tmp
 ENV COMPOSER_VERSION %COMPOSER_VERSION%
 
 RUN set -eux; \
-  curl --silent --fail --location --retry 3 --output /tmp/installer.php --url %COMPOSER_INSTALLER_URL% \
+  curl --silent --fail --location --retry 3 --output /tmp/installer.php --url %COMPOSER_INSTALLER_URL%; \
   php -r " \
     \$signature = '%COMPOSER_INSTALLER_HASH%'; \
     \$hash = hash('sha384', file_get_contents('/tmp/installer.php')); \
@@ -51,10 +49,10 @@ RUN set -eux; \
       unlink('/tmp/installer.php'); \
       echo 'Integrity check failed, installer is either corrupt or worse.' . PHP_EOL; \
       exit(1); \
-    }" \
-  php /tmp/installer.php --no-ansi --install-dir=/usr/bin --filename=composer --version=${COMPOSER_VERSION} \
-  composer --ansi --version --no-interaction \
-  rm -f /tmp/installer.php \
+    }"; \
+  php /tmp/installer.php --no-ansi --install-dir=/usr/bin --filename=composer --version=${COMPOSER_VERSION}; \
+  composer --ansi --version --no-interaction; \
+  rm -f /tmp/installer.php; \
   find /tmp -type d -exec chmod -v 1777 {} +
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
