Fix entrypoint shebang

--- a/1.10/Dockerfile
+++ b/1.10/Dockerfile
@@ -59,6 +59,6 @@ COPY docker-entrypoint.sh /docker-entrypoint.sh
 
 WORKDIR /app
 
-ENTRYPOINT ["/bin/sh", "/docker-entrypoint.sh"]
+ENTRYPOINT ["/docker-entrypoint.sh"]
 
 CMD ["composer"]
