add 2.0 and change docker workflow

--- a/2.0/Dockerfile
+++ b/2.0/Dockerfile
@@ -38,12 +38,12 @@ memory_limit=-1\n\
 
 ENV COMPOSER_ALLOW_SUPERUSER 1
 ENV COMPOSER_HOME /tmp
-ENV COMPOSER_VERSION %COMPOSER_VERSION%
+ENV COMPOSER_VERSION 2.0.0-alpha1
 
 RUN set -eux; \
-  curl --silent --fail --location --retry 3 --output /tmp/installer.php --url %COMPOSER_INSTALLER_URL%; \
+  curl --silent --fail --location --retry 3 --output /tmp/installer.php --url https://raw.githubusercontent.com/composer/getcomposer.org/cb19f2aa3aeaa2006c0cd69a7ef011eb31463067/web/installer; \
   php -r " \
-    \$signature = '%COMPOSER_INSTALLER_HASH%'; \
+    \$signature = '48e3236262b34d30969dca3c37281b3b4bbe3221bda826ac6a9a62d6444cdb0dcd0615698a5cbe587c3f0fe57a54d8f5'; \
     \$hash = hash('sha384', file_get_contents('/tmp/installer.php')); \
     if (!hash_equals(\$signature, \$hash)) { \
       unlink('/tmp/installer.php'); \
