--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -11,9 +11,9 @@ on:
 
 jobs:
 
-  build-and-test:
+  build-1.9:
 
-    name: Build and Test
+    name: Build 1.9
     runs-on: ubuntu-latest
     timeout-minutes: 20
 
@@ -23,7 +23,35 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build
-      run: make build
+      run: docker build .
+      working-dir: 1.9
 
-    - name: Test
-      run: make test
+  build-1.10:
+
+    name: Build 1.10
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+
+    steps:
+
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Build
+      run: docker build .
+      working-dir: 1.10
+
+  build-2.0:
+
+    name: Build 2.0
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+
+    steps:
+
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Build
+      run: docker build 2.0
+      working-dir: 2.0
