add package containing header

--- a/1.10/Dockerfile
+++ b/1.10/Dockerfile
@@ -18,6 +18,7 @@ RUN set -eux; \
 
 RUN set -eux; \
   apk add --no-cache --virtual .build-deps \
+    libbz2-dev \
     libzip-dev \
     zlib-dev \
   ; \
