--- a/1.10/Dockerfile
+++ b/1.10/Dockerfile
@@ -71,7 +71,7 @@ RUN set -eux; \
     --location \
     --retry 3 \
     --output /tmp/installer.php \
-    --url https://github.com/composer/getcomposer.org/blob/f24b8f860b95b52167f91bbd3e3a7bcafe043038/web/installer \
+    --url https://raw.githubusercontent.com/composer/getcomposer.org/blob/f24b8f860b95b52167f91bbd3e3a7bcafe043038/web/installer \
   ; \
   php -r " \
     \$signature = '48e3236262b34d30969dca3c37281b3b4bbe3221bda826ac6a9a62d6444cdb0dcd0615698a5cbe587c3f0fe57a54d8f5'; \
