Try another url

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -57,7 +57,7 @@ jobs:
     - name: Push tag(s) to Amazon ECR
       if: github.ref == 'refs/heads/master'
       env:
-        ECR_REPO: ecr-public.us-east-1.amazonaws.com/u0u1j5s3/composer
+        ECR_REPO: public.ecr.aws/u0u1j5s3/composer
       run: |
         docker tag composer/composer:1 $ECR_REPO:1
         docker tag composer/composer:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+') $ECR_REPO:$(grep -oE 'COMPOSER_VERSION 1.[0-9]+.[0-9]+' Dockerfile | grep -oE '1.[0-9]+.[0-9]+')
