--- a/.github/workflows/v2.yaml
+++ b/.github/workflows/v2.yaml
@@ -30,26 +30,26 @@ jobs:
         --tag composer/composer:$(grep -oE 'COMPOSER_VERSION 2.[0-9]+.[0-9]+' Dockerfile | grep -oE '2.[0-9]+.[0-9]+') \
         .
     - name: Login to Docker Hub
-      if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
     - name: Push tag(s) to Docker Hub
-      if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/main'
       run: |
         docker push composer/composer:latest
         docker push composer/composer:2
         docker push composer/composer:$(grep -oE 'COMPOSER_VERSION 2.[0-9]+.[0-9]+' Dockerfile | grep -oE '2.[0-9]+.[0-9]+')
     - name: Login to Amazon Public ECR
-      if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v1
       with:
         registry: public.ecr.aws
         username: ${{ secrets.AWS_ECR_ACCESS_KEY }}
         password: ${{ secrets.AWS_ECR_SECRET_KEY }}
     - name: Push tag(s) to Amazon Public ECR
-      if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/main'
       run: |
         docker tag composer/composer:latest $ECR_REPO:latest
         docker tag composer/composer:2 $ECR_REPO:2
