--- a/.github/workflows/v1.yaml
+++ b/.github/workflows/v1.yaml
@@ -20,13 +20,25 @@ jobs:
         working-directory: '1.10'
     steps:
     - uses: actions/checkout@v3
-    - name: Build
+    # Build full image: binary with runtime
+    - name: Build full image
       run: |
         docker build \
         --pull \
         --no-cache \
+        --target binary-with-runtime \
         --tag composer/composer:1 \
         --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 1.10.\d+' Dockerfile | grep -oP '1.10.\d+') \
+        .
+    # Build low-size image with binary only
+    - name: Build binary-only image
+      run: |
+        docker build \
+        --pull \
+        --no-cache \
+        --target standalone-binary \
+        --tag composer/composer:1-bin \
+        --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 1.10.\d+' Dockerfile | grep -oP '1.10.\d+')-bin \
         .
     - name: Login to Docker Hub
       if: github.ref == 'refs/heads/main'
@@ -39,6 +51,8 @@ jobs:
       run: |
         docker push composer/composer:1
         docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 1.10.\d+' Dockerfile | grep -oP '1.10.\d+')
+        docker push composer/composer:1-bin
+        docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 1.10.\d+' Dockerfile | grep -oP '1.10.\d+')-bin
     - name: Login to Amazon Public ECR
       if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v1
@@ -51,5 +65,9 @@ jobs:
       run: |
         docker tag composer/composer:1 $ECR_REPO:1
         docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 1.10.\d+' Dockerfile | grep -oP '1.10.\d+') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 1.10.\d+' Dockerfile | grep -oP '1.10.\d+')
+        docker tag composer/composer:1-bin $ECR_REPO:1-bin
+        docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 1.10.\d+' Dockerfile | grep -oP '1.10.\d+')-bin $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 1.10.\d+' Dockerfile | grep -oP '1.10.\d+')-bin
         docker push $ECR_REPO:1
         docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 1.10.\d+' Dockerfile | grep -oP '1.10.\d+')
+        docker push $ECR_REPO:1-bin
+        docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 1.10.\d+' Dockerfile | grep -oP '1.10.\d+')-bin
