--- a/.github/workflows/v2.yaml
+++ b/.github/workflows/v2.yaml
@@ -22,12 +22,23 @@ jobs:
         working-directory: '2.2'
     steps:
     - uses: actions/checkout@v3
-    - name: Build
+    # Build full image: binary with runtime
+    - name: Build full image
       run: |
         docker build \
         --pull \
         --no-cache \
+        --target binary-with-runtime \
         --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+') \
+        .
+    # Build low-size image with binary only
+    - name: Build binary-only image
+      run: |
+        docker build \
+        --pull \
+        --no-cache \
+        --target standalone-binary \
+        --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')-bin \
         .
     - name: Login to Docker Hub
       if: github.ref == 'refs/heads/main'
@@ -39,6 +50,7 @@ jobs:
       if: github.ref == 'refs/heads/main'
       run: |
         docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')
+        docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')-bin
     - name: Login to Amazon Public ECR
       if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v1
@@ -50,7 +62,9 @@ jobs:
       if: github.ref == 'refs/heads/main'
       run: |
         docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')
+        docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')-bin $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')-bin
         docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')
+        docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.2.\d+' Dockerfile | grep -oP '2.2.\d+')-bin
   build23:
     name: Build v2.3
     runs-on: ubuntu-latest
@@ -60,12 +74,23 @@ jobs:
         working-directory: '2.3'
     steps:
     - uses: actions/checkout@v3
-    - name: Build
+    # Build full image: binary with runtime
+    - name: Build full image
       run: |
         docker build \
         --pull \
         --no-cache \
+        --target binary-with-runtime \
         --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.3.\d+' Dockerfile | grep -oP '2.3.\d+') \
+        .
+    # Build low-size image with binary only
+    - name: Build binary-only image
+      run: |
+        docker build \
+        --pull \
+        --no-cache \
+        --target standalone-binary \
+        --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.3.\d+' Dockerfile | grep -oP '2.3.\d+')-bin \
         .
     - name: Login to Docker Hub
       if: github.ref == 'refs/heads/main'
@@ -77,6 +102,7 @@ jobs:
       if: github.ref == 'refs/heads/main'
       run: |
         docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 2.3.\d+' Dockerfile | grep -oP '2.3.\d+')
+        docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 2.3.\d+' Dockerfile | grep -oP '2.3.\d+')-bin
     - name: Login to Amazon Public ECR
       if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v1
@@ -88,7 +114,9 @@ jobs:
       if: github.ref == 'refs/heads/main'
       run: |
         docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.3.\d+' Dockerfile | grep -oP '2.3.\d+') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.3.\d+' Dockerfile | grep -oP '2.3.\d+')
+        docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.3.\d+' Dockerfile | grep -oP '2.3.\d+') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.3.\d+' Dockerfile | grep -oP '2.3.\d+')-bin
         docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.3.\d+' Dockerfile | grep -oP '2.3.\d+')
+        docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.3.\d+' Dockerfile | grep -oP '2.3.\d+')-bin
   build24:
     name: Build v2.4
     runs-on: ubuntu-latest
@@ -98,14 +126,27 @@ jobs:
         working-directory: '2.4'
     steps:
       - uses: actions/checkout@v3
-      - name: Build
+      # Build full image: binary with runtime
+      - name: Build full image
         run: |
           docker build \
           --pull \
           --no-cache \
+          --target binary-with-runtime \
           --tag composer/composer:latest \
           --tag composer/composer:2 \
           --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.4.\d+' Dockerfile | grep -oP '2.4.\d+') \
+          .
+      # Build low-size image with binary only
+      - name: Build binary-only image
+        run: |
+          docker build \
+          --pull \
+          --no-cache \
+          --target standalone-binary \
+          --tag composer/composer:latest-bin \
+          --tag composer/composer:2-bin \
+          --tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.4.\d+' Dockerfile | grep -oP '2.4.\d+')-bin \
           .
       - name: Login to Docker Hub
         if: github.ref == 'refs/heads/main'
@@ -119,6 +160,9 @@ jobs:
           docker push composer/composer:latest
           docker push composer/composer:2
           docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 2.4.\d+' Dockerfile | grep -oP '2.4.\d+')
+          docker push composer/composer:latest-bin
+          docker push composer/composer:2-bin
+          docker push composer/composer:$(grep -oP 'COMPOSER_VERSION 2.4.\d+' Dockerfile | grep -oP '2.4.\d+')-bin
       - name: Login to Amazon Public ECR
         if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v1
@@ -132,6 +176,12 @@ jobs:
           docker tag composer/composer:latest $ECR_REPO:latest
           docker tag composer/composer:2 $ECR_REPO:2
           docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.4.\d+' Dockerfile | grep -oP '2.4.\d+') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.4.\d+' Dockerfile | grep -oP '2.4.\d+')
+          docker tag composer/composer:latest $ECR_REPO:latest-bin
+          docker tag composer/composer:2 $ECR_REPO:2-bin
+          docker tag composer/composer:$(grep -oP 'COMPOSER_VERSION 2.4.\d+' Dockerfile | grep -oP '2.4.\d+') $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.4.\d+' Dockerfile | grep -oP '2.4.\d+')-bin
           docker push $ECR_REPO:latest
           docker push $ECR_REPO:2
           docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.4.\d+' Dockerfile | grep -oP '2.4.\d+')
+          docker push $ECR_REPO:latest-bin
+          docker push $ECR_REPO:2-bin
+          docker push $ECR_REPO:$(grep -oP 'COMPOSER_VERSION 2.4.\d+' Dockerfile | grep -oP '2.4.\d+')-bin
